--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#2b5797">
   <meta name="msapplication-TileColor" content="#2b5797">
   <meta name="theme-color" content="#ffffff">
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta property="og:title" content="Uazo" />
+  <meta property="og:description" content="Digitize your production floor" />
+  <meta property="og:image" content="uazo.png" />
+  <meta property="og:image:alt" content="Image" />
   <style>
     body {
       margin: 0;
