--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta property="og:title" content="Uazo" />
   <meta property="og:description" content="Digitize your production floor" />
+  <meta property="og:image" content="apple-touch-icon.png" />
+  <meta property="og:image:alt" content="Image" />
   <style>
     body {
       margin: 0;
