--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     }
     svg#small {
       max-width: 375px;
-    }
+    } 
     svg#large {
       display: none;
       visibility: hidden;
@@ -52,18 +52,25 @@
 </head>
 <body>
   <div>
-    <svg id="small" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="375" height="812" viewBox="0 0 375 812">
-      <image width="375" height="812" xlink:href="/small.png"></image> <a xlink:href="mailto:info@uazo.in">
-        <rect x="27" y="666" fill="#fff" opacity="0" width="180" height="36"></rect>
+    <svg id="small" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="375" height="748" viewBox="0 0 722 1440" preserveAspectRatio="xMinYMin">
+      <image width="722" height="1440" xlink:href="/small.png"></image>
+      <a xlink:href="https://docs.google.com/presentation/d/1aGOMW-C645Y7f1ZNI73qbuk9Farayu3eXw0cdUjtlGA/edit#slide=id.gbd47907c43_1_0">
+        <rect x="41" y="409" fill="#fff" opacity="0" width="326" height="45"></rect>
+      </a><a xlink:href="mailto:info@uazo.in">
+        <rect x="41" y="1127" fill="#fff" opacity="0" width="226" height="46"></rect>
       </a><a xlink:href="tel:8178812892">
-        <rect x="25" y="710" fill="#fff" opacity="0" width="220" height="30"></rect>
+        <rect x="41" y="1188" fill="#fff" opacity="0" width="271" height="40"></rect>
       </a>
     </svg>
-    <svg id="large" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="1200" height="765" viewBox="0 0 1920 1080">
-      <image width="1920" height="1080" xlink:href="/large.png"></image> <a xlink:href="mailto:info@uazo.in">
-        <rect x="1386" y="807" fill="#fff" opacity="0" width="350" height="58"></rect>
+    <svg id="large" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="1200" height="765" viewBox="0 0 1920 1109" preserveAspectRatio="xMinYMin">
+      <image width="1920" height="1109" xlink:href="/large.jpg"></image>
+      <a xlink:href="https://docs.google.com/presentation/d/1aGOMW-C645Y7f1ZNI73qbuk9Farayu3eXw0cdUjtlGA/edit#slide=id.gbd47907c43_1_0">
+        <rect x="1486" y="442" fill="#fff" opacity="0" width="262" height="40"></rect>
+      </a>
+      <a xlink:href="mailto:info@uazo.in">
+        <rect x="1486" y="668" fill="#fff" opacity="0" width="250" height="46"></rect>
       </a><a xlink:href="tel:8178812892">
-        <rect x="1386" y="873" fill="#fff" opacity="0" width="429" height="50"></rect>
+        <rect x="1485" y="726" fill="#fff" opacity="0" width="294" height="40"></rect>
       </a>
     </svg>
   </div>
